[package]
name = "sonos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sonos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"
futures = "0.3.30"
serde_json = "1.0.111"
sonor = "2.0.0"
thiserror = "1.0.56"

[dependencies.clap]
version = "4.4.13"
features = ["derive"]

[dependencies.serde]
version = "1.0.194"
features = ["derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["rt-multi-thread", "macros"]
